--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
           <li><a href="https://github.com/coffeeaddict/kindergarten/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/coffeeaddict/kindergarten">View On <strong>GitHub</strong></a></li>
         </ul>
+
+        <p><a href="http://travis-ci.org/coffeeaddict/kindergarten"><img src="https://secure.travis-ci.org/coffeeaddict/kindergarten.png" alt="Build Status"></a>
+        <br /><a href="https://codeclimate.com/github/coffeeaddict/kindergarten"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a></p>
       </header>
       <section>
-        <h1>Kindergarten</h1>
+<p class="quote">A way to achieve modularity and modular-security within a sandbox on steroids.</p>
 
-<p><a href="http://travis-ci.org/coffeeaddict/kindergarten"><img src="https://secure.travis-ci.org/coffeeaddict/kindergarten.png" alt="Build Status"></a></p>
+<h2>Introduction</h2>
+<script async class="speakerdeck-embed" data-id="50890d9d65972f000201e0d7" data-ratio="1.3333333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
-<p><a href="https://codeclimate.com/github/coffeeaddict/kindergarten"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a></p>
-
-<p>A way to achieve modularity and modular security with a sandbox on steroids.</p>
 
 <h2>Installation</h2>
 
@@ -124,7 +125,7 @@ hidden inside the Kindergarten. More will follow on the Wiki</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/coffeeaddict">coffeeaddict</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Based on the theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
