--- a/index.html
+++ b/index.html
@@ -34,6 +34,35 @@
 <p class="quote">A way to achieve modularity and modular-security within a sandbox on steroids.</p>
 
 <h2>Introduction</h2>
+
+<h3>Modules</h3>
+
+<p>A Kindergarten could be seen as collection of service objects, each
+representing a 'play area' <small>(think: doll area, lego table, etc.
+  etc.)</small>.</p>
+
+<p>Within the realm of kindergarten, the service objects are refered to as
+modules.</p>
+
+<h3>Sandboxing</h3>
+
+<p>The modules are plugged into the kindergarten and can be governed, both per
+module and kindergarten wide. There are governesses looking for, and preventing
+trouble.</p>
+
+<p>Each module is not just exposed as-is; it is sandboxed. Which means that
+they must specify which methods are to be played with.</p>
+
+<h3>Child</h3>
+
+<p>What good would a kindergarten with a sandbox full of toys be without a
+child?  In a Rails context; the most logical choise for a child would be the
+<code>current_user</code>.</p>
+
+<h3>Slides</h3>
+
+<p>The slides below are a nice introduction into the concepts behind Kindergarten</p>
+
 <script async class="speakerdeck-embed" data-id="50890d9d65972f000201e0d7" data-ratio="1.3333333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
 
